add info connector

--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
       <div class="cross-section">
         <div class="inner"></div>
       </div>
+      <div class="info-connector">
+      </div>
+    </div>
+    <div class="drone-info">
     </div>
     <script src="js/main.js"></script>
   </body>
