--- a/index.html
+++ b/index.html
@@ -1,58 +1,49 @@
 <html>
+  <head>
+    <script type="text/javascript" async="" src="https://acdn.adnxs.com/video/outstream/ANOutstreamVideo.js"></script>
+    <script async="" src="https://cdn.jsdelivr.net/npm/prebid.js@latest/dist/not-for-prod/prebid.js"></script>
+  <script>
+	    var pbjs = pbjs || {};
+	    pbjs.que = pbjs.que || [];
+
+	    var adUnits = [{
+	        code: 'video1',
+	        mediaTypes: {
+	            video: {
+	                context: 'outstream',
+			playerSize: [640, 480],
+			mimes: ['video/mp4'],
+			protocols: [1, 2, 3, 4, 5, 6, 7, 8],
+			playbackmethod: [2],
+			skip: 1
+	            }
+	        },
+	        bids: [{
+	            bidder: 'appnexus',
+	            params: {
+	                placementId: 13232385
+	            }
+	        }]
+        }];
+
+        pbjs.que.push(function() {
+            pbjs.addAdUnits(adUnits);
+            pbjs.requestBids({
+                timeout: 1000,
+                bidsBackHandler: function(bids) {
+                    var highestCpmBids = pbjs.getHighestCpmBids('video1');
+                    pbjs.renderAd(document, highestCpmBids[0].adId);
+                }
+            });
+        });
+
+    
+  </script>
+
+  </head>
   <body>
-    <head>
-      <link href="style.css" rel="stylesheet" type="text/css" />
-    </head>
-    <div class="drone-wrapper">
-      <div class="image-wrap back">
-        <img src="img/drone_3.png" />
-      </div>
-      <div class="image-wrap middle">
-      </div>
-      <div class="image-wrap front">
-      </div>
-      <div class="sprinkles">
-        <div class="sprinkle sprinkle-1">
-          <div class="pulse-ring"></div>
-          <div class="inner"></div>
-        </div>
-        <div class="sprinkle sprinkle-2">
-          <div class="pulse-ring"></div>
-          <div class="inner"></div>
-        </div>
-        <div class="sprinkle sprinkle-3">
-          <div class="pulse-ring"></div>
-          <div class="inner"></div>
-        </div>
-        <div class="sprinkle sprinkle-4">
-          <div class="pulse-ring"></div>
-          <div class="inner"></div>
-        </div>
-        <div class="sprinkle sprinkle-5">
-          <div class="pulse-ring"></div>
-          <div class="inner"></div>
-        </div>
-        <div class="sprinkle sprinkle-6">
-          <div class="pulse-ring"></div>
-          <div class="inner"></div>
-        </div>
-        <div class="sprinkle sprinkle-7">
-          <div class="pulse-ring"></div>
-          <div class="inner"></div>
-        </div>
-        <div class="sprinkle sprinkle-8">
-          <div class="pulse-ring"></div>
-          <div class="inner"></div>
-        </div>
-      </div>
-      <div class="cross-section">
-        <div class="inner"></div>
-      </div>
-      <div class="info-connector">
-      </div>
-    </div>
-    <div class="drone-info">
-    </div>
-    <script src="js/main.js"></script>
+    <div id='video1'>
+      <p>Prebid Outstream Video Ad</p>
+    </div> 
   </body>
 </html>
