--- a/index.html
+++ b/index.html
@@ -18,12 +18,20 @@
 			skip: 1
 	            }
 	        },
-	        bids: [{
+	        bids: [
+            {
 	            bidder: 'appnexus',
 	            params: {
 	                placementId: 13232385
-	            }
-	        }]
+	            },
+            },
+            {  
+              bidder: 'pubmatic',
+              params: {
+                  publisherId: '32572',
+              },
+            },
+         ]
         }];
 
         pbjs.que.push(function() {
