--- a/index.html
+++ b/index.html
@@ -271,5 +271,6 @@
         $vvvInit('vvv-video-ad', videoUrls)
       })
     </script>
+    <script src="//imasdk.googleapis.com/js/sdkloader/ima3.js"></script>
   </body>
 </html>
